# god-like

./: .pylintrc  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build_docs.yml
1.x/: 404.html  index.html  sitemap.xml
1.x/api/api/: index.html
1.x/api/request/: index.html
1.x/api/response/: index.html
1.x/search/: search_index.json
docs/: index.md
docs/api/: api.md  request.md  response.md
god_like/: __init__.py  godlike.py  request.py  response.py
latest/api/api/: index.html
latest/api/request/: index.html
latest/api/response/: index.html
overrides/: main.html
