[tool.poetry]
name = "god-like"
version = "1.0.0"
description = "Flask for humans."
authors = ["hostedposted <hostedpostedsite@gmail.com>"]
repository = "https://github.com/hostedposted/god-like/"
documentation = "https://hostedposted.github.io/god-like/"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Werkzeug = "^2.0.1"

[tool.poetry.dev-dependencies]
mkdocs = "^1.2.2"
mkdocs-material = "^7.2.6"
mkdocs-git-revision-date-localized-plugin = "^0.10.0"
mike = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
